Switch to Fowler-Noll-Vo hash function for B2S
The default Rush HashMap hash function is SipHasher. This works well for
most use cases, but is unsatisfactory for short keys. The Fowler-Noll-Vo
(FNV) hash function is superior for this use case as it is much faster
on the small, 32-bit integer keys we are using.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ keywords = ["encode", "decode", "utf-8"]
 travis-ci = { repository = "nuew/base65536", branch = "master" }
 
 [dependencies]
+fnv = "1"
 lazy_static = "0.2"
