--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ keywords = ["encode", "decode", "utf-8"]
 [badges]
 travis-ci = { repository = "nuew/base65536", branch = "master" }
 
+[features]
+default = ["fnv"]
+
 [dependencies]
-fnv = "1"
+fnv = { version = "1", optional = true }
 lazy_static = "0.2"
