--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "base65536"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Nuew <code@nuew.net>"]
 license = "Apache-2.0"
 description = "Unicode's answer to base64"
@@ -8,6 +8,7 @@ repository = "https://github.com/nuew/base65536"
 documentation = "https://docs.rs/base65536"
 readme = "README.md"
 keywords = ["encode", "decode", "utf-8"]
+categories = ["encoding"]
 
 [badges]
 travis-ci = { repository = "nuew/base65536", branch = "master" }
