--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ travis-ci = { repository = "nuew/base65536", branch = "master" }
 
 [features]
 default = ["fnv"]
+nightly = []
 
 [dependencies]
 fnv = { version = "1", optional = true }
