--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,6 @@ default = ["fnv"]
 nightly = []
 
 [dependencies]
+clippy = { version = "*", optional = true }
 fnv = { version = "1", optional = true }
 lazy_static = "1"
