--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
 name = "base65536"
-version = "0.3.1"
+version = "0.4.0" # please update html_root_url in src/lib.rs
 authors = ["Nuew <code@nuew.net>"]
+description = "A binary encoding optimized for UTF-32/UCS-4 encoded text and Twitter"
 license = "Apache-2.0"
-description = "Unicode's answer to base64"
 repository = "https://github.com/nuew/base65536"
-documentation = "https://docs.rs/base65536"
 readme = "README.md"
 keywords = ["encode", "decode", "utf-8"]
 categories = ["encoding"]
