--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,6 @@ default = ["fnv"]
 nightly = []
 
 [dependencies]
-clippy = { version = "*", optional = true }
+clippy = { version = "0", optional = true }
 fnv = { version = "1", optional = true }
 lazy_static = "1"
