--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,10 @@ categories = ["encoding"]
 travis-ci = { repository = "nuew/base65536", branch = "master" }
 
 [features]
-default = ["fnv"]
 nightly = []
 
 [dependencies]
-fnv = { version = "1", optional = true }
-lazy_static = "1"
+phf = "0.7"
+
+[build-dependencies]
+phf_codegen = "0.7"
